# lvd-linux

./: .config  .gitignore  .gitmodules  Makefile  README.md  config_lvd  out.txt
Documentation/capability/: Capability_Module_for_LCD.docx
Documentation/lcd-domains/: cap.txt  debugging.txt  ipc.txt  kliblcd.txt  lcd.txt  liblcd.txt  main.txt  setup.txt  test-mods.txt  vmx.txt
arch/: Kconfig
arch/x86/: Kbuild  Kconfig  Kconfig.debug
arch/x86/entry/: entry_64.S
block/: blk-core.c  blk-mq.c  blk-sysfs.c  genhd.c
drivers/: Kconfig  Makefile
drivers/hwmon/: acpi_power_meter.c
drivers/lcd/: Kconfig  Makefile  cap.c  core.c  elf.c  ipc.c  lcd_init.c
drivers/lcd-cspace/: Kconfig  Makefile  cap-cache.c  cap.c  main.c  test.c  test.h
drivers/lcd-prototype/: Kconfig  Makefile  README
drivers/net/: dummy.c
drivers/thc/: main.c  thc.c  thcsync.c
fs/: Kconfig  Makefile  namei.c
fs/minix-lcd/: Kconfig  Makefile  minix.h
include/asm-generic/: getorder.h  pgtable.h
include/lcd/: api.h  boot.h  cap-cache.h  cap-internal.h  cap.h  console.h  elfnote.h  factory.h  ipc.h  ipc_common_defs.h  lcd.h
include/lcd-domains/: cap.h  common.h  dispatch_loop.h  ipc.h  kliblcd.h  lcd-domains.h  liblcd-config.h  liblcd-hacks.h  liblcd.h  syscall.h  tests-util.h  thc.h  thcinternal.h  trampoline.h  types.h  utcb.h
include/lcd-prototype/: lcd-msg.h  lcd.h
include/linux/: blk-lcd.h  blk-mq.h  blkdev.h  fs.h  init_task.h  io.h  kernel.h  kmod.h  lcd-domains.h  lcd_trace.h  log2.h  mm.h  module.h  netdev_features.h  netdevice.h  perf_event.h  priv_mempool.h  sched.h  skbuff.h  syscalls.h  vmalloc.h
kernel/: fork.c  kallsyms.c  kmod.c  membarrier.c  module.c  sys_ni.c  sysctl.c
kernel/printk/: printk.c
kernel/sched/: core.c
lcd-domains/: .gitignore  Kbuild  Kconfig  Makefile  Makefile.old  README.md  bad-patterns  create_tree.sh  insmk  load_nvmegen.sh  make-log  notes  runex
lcd-domains/common/: module_create.c  module_create_lvd.c  module_load.c  resource_tree.c  sync_ipc_poll.c  vmfunc.lds.S  vmfunc_calls.c  vmfunc_syscalls.c
lcd-domains/kliblcd/: boot_info.c  cap.c  console.c  cptr_cache.c  create.c  create_klcd.c  enter_exit.c  irq.c  mem.c  module_create_klcd.c  module_load.c  sync_ipc.c  trace.c
lcd-domains/libdeker/: .gitignore  deker_rt.c  main.c
lcd-domains/liblcd/: Kbuild  resolve.c
lcd-domains/microkernel/: Kbuild  cap.c  cap_types.c  console.c  create.c  debugfs.c  internal.h  iommu.c  ipc.c  ksym.c  lcd_domains.lds.S  main.c  mem.c  mem_itree.c  run.c  vmfunc.c  vmfunc_entry.c  vmfunc_init.c  vmfunc_ipc.c  vmfunc_springboard.c  vmfunc_stack.c  vmfunc_switch.c
lcd-domains/module-init-tools/: AUTHORS  BUGS  FAQ  TODO  depmod.c  elfops.c  elfops.h  index.c  insmod.c  install-with-care  logging.h  modprobe.c  testing.h
lcd-domains/module_init_tools/: HACKING  README  elfops_core.c  insmod.c  logging.c  modprobe.c  rmmod.c
lcd-domains/scripts/: Kbuild.deker_hacks  Kbuild.libdeker  Kbuild.liblcd  Kbuild.microkernel  Kbuild.test_mods  Makefile.libdeker  Makefile.libdeker.dummy  Makefile.liblcd  Makefile.microkernel  Makefile.test_mods  build_all.sh  build_libdeker.sh  build_liblcd.sh  build_microkernel.sh  conf.awk  defaultconfig  deker.awk  deker_mod_post.sh  insmk  loadex  mk  relpath.py  rmmk  runex  unloadex
lcd-domains/test-mods/: Kbuild
lcd-domains/test_mods/: .gitignore  Kbuild  config
lcd-domains/tests/: Kbuild  cap-tests.c  cptr-tests.c  create_klcd-tests.c  dstore-tests.c  enterexit-tests.c  ipc-tests.c  mem-tests.c
lib/: Kconfig  Makefile  ioremap.c
lib/thc/: Kconfig  Makefile  main.c  thc.c  thcsync.c
libdeker/: main.c
liblcd/: Makefile  notes.txt  resolve.c
liblcd/lcd/: cap.c  dstore.c  enterexit.c  ipc.c  page_alloc.c  printk.c  tests.c
liblcd/lib/: find_next_bit.c  hexdump.c  kstrtox.c  reciprocal_div.c  string.c  vsprintf.c
liblcd/mm/: internal.h  slab.h  util.c
mm/: Kconfig  Makefile  madvise.c  memory.c  mmap.c  mprotect.c  msync.c  percpu.c  priv_mempool.c
net/core/: dev.c  ethtool.c  skbuff.c
net/ipv4/: arp.c  ip_output.c  tcp.c  tcp_output.c
scripts/: Makefile.build  setlocalversion
scripts/genksyms/: genksyms.c
scripts/mod/: modpost.c
tools/lcd/: .gitignore  Makefile  inskern4lcd.c  insmod4lcd.c
tools/module-init-tools/: .gitignore  CODING  ChangeLog  Makefile.am  NEWS  config_filter.c  config_filter.h  configure.ac  depmod.h  generate-modprobe.conf  insmod.c  list.h  lsmod.c  modindex.c  modinfo.c  modprobe.c  tables.c  tables.h  util.c  util.h  zlibsupport.c
tools/module-init-tools/doc/: depmod.d.sgml  modprobe.d.sgml  modules.dep.bin.sgml
tools/module-init-tools/tests/: runtests
tools/module-init-tools/tests/data/: Makefile
tools/module-init-tools/tests/data/src/: complex_b.c  complex_d.c  export_dep.c  export_nodep.c  loop1.c  loop2.c
tools/module-init-tools/tests/test-depmod/: 05loop.sh  12compressed.sh  13compressed-maps.sh  15symlink.sh  16specific-modules.sh
tools/module-init-tools/tests/test-insmod/: 03options.sh  04stdin.sh
tools/module-init-tools/tests/test-lsmod/: 03oldstyle.sh
tools/module-init-tools/tests/test-modinfo/: 03field.sh  04compressed.sh
tools/module-init-tools/tests/test-modprobe/: 04config.sh  09configerrors.sh  10alias.sh  11stripversions.sh  12whitespace.sh  15env.sh  16showdepends.sh  19quiet.sh  21wildinstall.sh  22recursiveinstall.sh
tools/module-init-tools/tests/test-modprobe-indexed/: 02simple.sh  03deps.sh  10alias.sh
tools/module-init-tools/tests/test-rmmod/: 02namefix.sh  03inuse.sh
tools/module-init-tools/tests/valgrind/: lsmod  valgrindme.sh
tools/perf/: builtin-top.c
virt/: Kconfig  Makefile
virt/lcd/: Kconfig  Makefile  api-lib.c  api.c  cap-cache.c  core.c  elf.c  factory.c  lcd-domains.c
virt/lcd-domains/: Kconfig  Makefile  cap-cache.c  cap.c  elf.c  internal.h  ipc.c  kliblcd.c  lcd-cspace-tests.c  lcd-cspace-tests2.c  lcd-domains.c  lcd-module-load-test.c  lcd-tests.c  main.c  mm.c  mm.h  notes.txt  thc.c  thcsync.c
xcap/: Makefile  cap.c  cap.h  capability.c  capability.h  hello.c  lcd_cap.c  lcd_cap.h
(+1298 files in other folders)
